asteria/core/tests/errors/elaboration_errors/type_variable_used_as_term_variable_hint_closest_term_variables.asteriacore
f : forall {a : Type}. a -> a -> a -> a
  = \{a} -> \aa -> \aaa -> \b -> a;;
